--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -13,6 +13,7 @@ on:
     paths:
     # - docs/**
     - YouthMappersAcademy/**
+  workflow_dispatch:
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
