--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -24,6 +24,15 @@ jobs:
       id-token: write
     steps:
     - uses: actions/checkout@v3
+    
+    # Cache dependencies
+    - name: Cache pip
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
 
     # Install dependencies
     - name: Set up Python 3.11
