--- a/_toc.yml
+++ b/_toc.yml
@@ -18,3 +18,7 @@ parts:
   chapters:
   - file: 7-JOSM 1 - Introduction to Mapping With JOSM.md
   - file: 13-Introduction to 3D Data.md
+- caption: Exercises
+  numbered: true
+  chapters:
+  - file: EX1_field_data_collection.md
