--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,8 @@ logo: static/YMlogo.png
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
-  execute_notebooks: force
+  execute_notebooks: auto 
+  #force
 
 # Define the name of the latex output file for PDF builds
 latex:
