--- a/_toc.yml
+++ b/_toc.yml
@@ -16,7 +16,7 @@ parts:
 - caption: Advanced Track
   numbered: true
   chapters:
-  - file: 7-JOSM 1 - Introduction to Mapping With JOSM.md
+  # - file: 7-JOSM 1 - Introduction to Mapping With JOSM.md
   - file: 13-Introduction to 3D Data.md
 - caption: Exercises
   numbered: false 
