--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,20 @@ html:
   output_folder: docs
   extra_css:
     - static/custom.css
+  google_analytics_id:  'G-G3T9RK0QFP'  
+  analytics:
+    google_analytics_id: G-G3T9RK0QFP
 sphinx:
   config:
     language: en
+
+
+# <!-- Google tag (gtag.js) -->
+# <script async src="https://www.googletagmanager.com/gtag/js?id=G-G3T9RK0QFP"></script>
+# <script>
+#   window.dataLayer = window.dataLayer || [];
+#   function gtag(){dataLayer.push(arguments);}
+#   gtag('js', new Date());
+
+#   gtag('config', 'G-G3T9RK0QFP');
+# </script>
