--- a/_config.yml
+++ b/_config.yml
@@ -36,20 +36,19 @@ html:
   output_folder: docs
   extra_css:
     - static/custom.css
-  google_analytics_id:  'G-G3T9RK0QFP'  
+  google_analytics_id:  'G-J1EHVT3TZF'  
   analytics:
-    google_analytics_id: G-G3T9RK0QFP
+    google_analytics_id: G-J1EHVT3TZF
 sphinx:
   config:
     language: en
 
-
 # <!-- Google tag (gtag.js) -->
-# <script async src="https://www.googletagmanager.com/gtag/js?id=G-G3T9RK0QFP"></script>
+# <script async src="https://www.googletagmanager.com/gtag/js?id=G-J1EHVT3TZF"></script>
 # <script>
 #   window.dataLayer = window.dataLayer || [];
 #   function gtag(){dataLayer.push(arguments);}
 #   gtag('js', new Date());
 
-#   gtag('config', 'G-G3T9RK0QFP');
+#   gtag('config', 'G-J1EHVT3TZF');
 # </script>
