--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -54,7 +54,11 @@ jobs:
     - name: Build the book
       run: |
         jupyter-book build .
-
+    # Add Google Search Console verification file
+    - name: Add Google verification file
+      run: |
+        cp googlee63085d15fc885b1.html _build/html/
+        
     # Upload the book's HTML as an artifact
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
